<resources>
    <string name="app_name">Remote Bound Service</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">bind_service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="get_random_number">Get Random Number</string>
    <string name="start_remote_service">start Remote Service</string>
    <string name="display_message">Number Generated From DataService is %d</string>
</resources>